考试-增加填空简答

--- a/src/assets/less/testPaper.less
+++ b/src/assets/less/testPaper.less
@@ -423,13 +423,15 @@ html {
     color: #ff6b6b;
 }
 
-.el-radio.is-disabled.is-checked.correct .el-radio__input.is-disabled + span.el-radio__label, 
+.el-radio.is-disabled.is-checked.correct .el-radio__input.is-disabled +span.el-radio__label,
 .el-checkbox.is-disabled.is-checked.correct .el-checkbox__input.is-disabled + span.el-checkbox__label{
     color: #02c39a !important;
 }
 
 
-.topic-content .correct .el-radio__label{
+.topic-content .correct
+.el-radio__label
+{
     color: #02c39a !important;
 }
 
