--- a/src/assets/less/testPaper.less
+++ b/src/assets/less/testPaper.less
@@ -21,7 +21,7 @@ html {
 .topic-nav {
     background: #fafafa;
     border-radius: 2px;
-    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
+    box-shadow: 0px 2px 12px 0 rgba(0, 0, 0, .1);
 }
 
 .testPaper {
