--- a/src/views/courcopy/assets/css/global.css
+++ b/src/views/courcopy/assets/css/global.css
@@ -160,14 +160,14 @@ a.current-2 .lh-p-icon{background-position:0 -254px}
 .h-r-s-box .s-btn{background:0 0;border:none;position:absolute;right:3px;top:0;width:30px;height:30px;cursor:pointer}
 .h-r-s-box input:focus{border-color:#ddd;color:#666;width:150px}
 .h-mobile-mask,.head-mobile,.mw-nav,.mw-nav-btn{display:none}
-.lh-menu{margin:0 10px;padding:0}
+.lh-menu{margin:0;padding:0}
 .lh-menu ul li.lh-menu-stair{padding-bottom:5px;margin-bottom:10px}
 #lh-menu ul li.lh-menu-stair dl dd a:hover,.lh-menu ul li.lh-menu-stair a:hover,.lh-menu ul li.lh-menu-stair ol li.lh-menu-second a:hover{background:#fbfbfb;transition:.3s;-webkit-transition:.3s;text-decoration:none}
-.lh-menu ul li.lh-menu-stair a{background:#f8f8f8;color:#333;display:block;font:16px/36px 'Microsoft YaHei';height:36px;padding:0 10px;overflow:hidden}
+.lh-menu ul li.lh-menu-stair a{background:#f8f8f8;color:#333;display:block;font:16px/36px 'Microsoft YaHei';height:auto;padding:0 10px;overflow:hidden}
 .lh-menu ul li.lh-menu-stair a.current-1{background:#f4f4f4;border-bottom:1px solid #e6e6e6}
 .lh-menu-i-1{background-color:#fff;border:1px solid #bbb;border-radius:50%;text-align:center;line-height:12px}
 .lh-menu-i-1 font{color:#4e4e4e;font:18px/24px 'Microsoft YaHei'}
-.lh-menu ul li.lh-menu-stair ol li.lh-menu-second a{background:#fff;color:#555;display:block;font:14px/32px 'Microsoft YaHei';height:32px;padding:0 10px;margin-top:5px;overflow:hidden}
+.lh-menu ul li.lh-menu-stair ol li.lh-menu-second a{background:#fff;color:#555;display:block;font:14px/32px 'Microsoft YaHei';height:auto;padding:0 10px;margin-top:5px;overflow:hidden}
 .lh-menu-i-2{background-color:#fff;border:1px solid #ccc;border-radius:50%;width:12px;height:12px}
 .lh-menu-second a span.fr .lh-p-icon{opacity:.6;-moz-opacity:.6;filter:alpha(opacity=88)}
 .lh-menu-second a span.fr{color:#bbb;font-size:12px}
@@ -176,7 +176,7 @@ a.current-2 .lh-p-icon{background-position:0 -254px}
 #lh-menu ul li.lh-menu-stair dl dd a.lh-playing,#lh-menu ul li.lh-menu-stair dl dd a.lh-playing span,#lh-menu ul li.lh-menu-stair dl dd a.lh-playing:hover{cursor:text}
 #lh-menu a.no-jd-play span,#lh-menu ul li.lh-menu-stair dl dd a span{font-family:Arial;font-size:12px;color:#aaa}
 .lh-menu ul ol,.lh-menu ul ol dl{display:none}
-.free-icon{border:1px solid #72CD91;border-radius:20px;color:#72CD91;display:inline-block;height:14px;line-height:14px;font-size:12px;padding:0 8px}
+.free-icon{border:1px solid #72CD91;border-radius:20px;color:#72CD91;display:inline-block;height:auto;line-height:14px;font-size:12px;padding:0 8px}
 .lh-menu ul ul.no-parent-node{display:block}
 .lh-menu ul ul.no-parent-node li.lh-menu-second a{background:0 0;font-size:14px}
 .lh-bj-list ul li{border-bottom:1px solid #e9e9e9;padding:12px 5px 2px 65px;position:relative;min-height:50px}
@@ -215,7 +215,7 @@ a.current-2 .lh-p-icon{background-position:0 -254px}
 .v-play-btn em{width:68px;height:68px}
 .v-play-btn:hover,.v-play-btn:hover em{opacity:.9;-moz-opacity:.9;filter:alpha(opacity=90);text-decoration:none}
 .c-infor-title{height:18px;overflow:hidden}
-.c-infor-title span{border-left:5px solid #333;color:#333;font-size:16px;display:inline-block;line-height:18px;padding-left:10px}
+.c-infor-title span{border-left:0px solid #333;color:#333;font-size:16px;display:inline-block;line-height:18px;padding-left:1px}
 .paging{padding:50px 0 20px;text-align:center}
 .paging a{border:1px solid #ccc;border-radius:40%;color:#666;display:inline-block;margin:0 5px;height:30px;width:30px;text-align:center;line-height:30px;transition:.3s;-webkit-transition:.3s}
 .paging a.current,.paging a.undisable{cursor:text}
